Fixed issues with z-index layering that was causing social media links to not work and adjusting for more responsiveness.

--- a/style.css
+++ b/style.css
@@ -184,13 +184,24 @@ box-shadow:         0px 0px 6px 5px rgba(50, 50, 50, 0.18);
 /* //////////////FULL WIDTH SECTION MOBILE */
 .fullWidthContainer {
     position:relative;
-    z-index:2;
+    z-index: inherit 1;
     display:block;
     min-width:150px;
     background-color:grey;
     height:600px;
     max-width:100%;
 }
+
+.fullWidthContainer2 {
+    position:relative;
+    z-index: 5;
+    display:block;
+    min-width:150px;
+    background-color:grey;
+    height:600px;
+    max-width:100%;
+}
+
 
 
 
@@ -324,6 +335,9 @@ margin-left:5px;
     font-size:130px;
 }
 
+
+/* ////PROJECTS -mobile */
+
 .slantedOnTopProjects {
     background-color:rgb(243, 243, 243);
     height:20px;
@@ -335,20 +349,13 @@ margin-left:5px;
 }
 
 .slantedOnBottomProjects {
-    
+    z-index:0;
     background-color:rgb(243, 243, 243);
     margin-top:-2px;
     margin-bottom:430px;
     height:10px;
     padding-top: 100px;
     padding-bottom: 50px;
-/* -webkit-clip-path: polygon(0 0, 100% 100px, 100% 100%, 0 calc(100% - 100px)); */
-/* clip-path:  polygon(
-    0 0,
-    100% 0,
-    100% 50%,
-    0 calc(0% - 0px)); */
-
     clip-path:  polygon(
     0 0,
     100% 0,
@@ -358,14 +365,17 @@ margin-left:5px;
 }
 
 #projectsDiv {
+    z-index:2;
     height:1900px;
     background-color:rgb(243, 243, 243);
 }
 
 #Projects {
+    z-index:0;
     
 }
 #desktop {
+    z-index:0;
     display:flex;
     flex-direction:row;
     flex-wrap:wrap;
@@ -413,12 +423,13 @@ margin-left:5px;
 
 
 .project {
+    z-index:8;
     display:flex;
     flex-direction:column;
     text-align:center;
     margin:-25px auto auto auto;
     width:250px;
-    height:360px;
+    height:380px;
     /* background-color:white; */
     /* overflow will allow to link all the links*/
     overflow:hidden;
@@ -433,10 +444,10 @@ h2 {
     position:relative;
     text-align:center;
     
-    background-color:rgba(000, 000, 000, 0.2);
+    background-color:rgba(158, 163, 188, 0.494);
     padding-top:60px;
     padding-bottom:60px;
-    color:white;
+    color:rgb(249, 249, 249);
     z-index:999;
     top:190px;
     left:0 auto;
@@ -498,11 +509,11 @@ p {
 
 #skillsDiv {
     
-    height:1400px;
-    z-index:-1;
+    z-index:0;
+    height:2250px;
     background-color:white;
-    margin-top:-500px;
-    margin-bottom:800px;
+    margin-top:-530px;
+    margin-bottom:0px;
     }
 
 
@@ -817,7 +828,8 @@ button {
     }
 
     #projectsDiv {
-        height:1600px;
+        z-index:4;
+        height:2000px;
         background-color:rgb(243, 243, 243);
         margin-top:0px;
         margin-bottom:0px;
@@ -826,11 +838,11 @@ button {
     #skillsDiv {
         
         text-align:center;
-    
-        height:800px;
-        
+        z-index: 1;
+        height:1000px;
         background-color:white;
-        margin-bottom:-80px;
+        margin-bottom:-400px;
+
         }
 
         .desktopViewSkills {
@@ -839,7 +851,7 @@ button {
             flex-direction:row;
             justify-content:space-between;
             margin:0 auto;
-            margin-bottom:140px;
+            
             
         }
 
@@ -884,7 +896,7 @@ button {
             }
             .description {
                 margin:10% auto;
-                margin-bottom:2%;
+                margin-bottom:%;
             }
         
             .description2 {
@@ -908,7 +920,7 @@ button {
         #socialIcons {
             width:600px;
             height:450px;
-            z-index:0;
+            z-index:4;
             display:flex;
             flex-direction:row;
             justify-content:space-between;
@@ -921,6 +933,7 @@ button {
         }
         
         .icon {
+            z-index:5;
             color:rgb(81, 81, 81);
             font-size:80px;
         }
